[package]
name = "scrap"
authors = ["Vid Kavšek <vkavsek@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A simple scraper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12"
scraper = "0.19"
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4"
thiserror = "1"
